Now the game read correctly the file containing the details of the scene